# disccord

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  install-dependencies.sh
cmake/Modules/: Findcpprest.cmake  Findlibbert.cmake
include/: REST.hpp  client.h  client.hpp  disccord.hpp  discord.h  message.h  rest.hpp  tokenType.hpp  token_type.hpp  user.h  websocket.h
include/REST/: client.hpp  route.hpp
include/api/: bucket_info.hpp  multipart_field.hpp  multipart_file.hpp  multipart_request.hpp  request_info.hpp
include/disccord/: client.hpp  disccord.hpp  permissions.hpp  rest.hpp  token_type.hpp  types.hpp
include/disccord/api/: bucket_info.hpp  multipart_field.hpp  multipart_file.hpp  multipart_request.hpp  request_info.hpp
include/disccord/models/: application.hpp  attachment.hpp  audit_log_action_type.hpp  audit_log_change.hpp  audit_log_entry.hpp  audit_logs.hpp  ban.hpp  channel.hpp  connection.hpp  embed.hpp  embed_author.hpp  embed_field.hpp  embed_footer.hpp  embed_image.hpp  embed_provider.hpp  embed_thumbnail.hpp  embed_video.hpp  emoji.hpp  entity.hpp  game.hpp  gateway_info.hpp  guild.hpp  guild_embed.hpp  guild_member.hpp  guild_prune.hpp  integration.hpp  integration_account.hpp  invite.hpp  invite_channel.hpp  invite_guild.hpp  invite_metadata.hpp  message.hpp  model.hpp  nickname.hpp  overwrite.hpp  presence.hpp  reaction.hpp  read_state.hpp  relationship.hpp  relationship_type.hpp  (+6 more)
include/disccord/rest/: api_client.hpp  client.hpp  route.hpp
include/disccord/util/: optional.hpp  semaphore.hpp  task_sleep.hpp  url_encode.hpp
include/disccord/ws/: api_client.hpp  client.hpp  dispatch.hpp  dispatcher.hpp  event.hpp  opcode.hpp
include/models/: application.hpp  attachment.hpp  ban.hpp  channel.hpp  connection.hpp  embed.hpp  embed_author.hpp  embed_field.hpp  embed_footer.hpp  embed_image.hpp  embed_provider.hpp  embed_thumbnail.hpp  embed_video.hpp  emoji.hpp  entity.hpp  entity.tpp  game.hpp  guild.hpp  guild_embed.hpp  guild_member.hpp  integration.hpp  integration_account.hpp  invite.hpp  invite_channel.hpp  invite_guild.hpp  invite_metadata.hpp  message.hpp  model.hpp  overwrite.hpp  presence.hpp  reaction.hpp  read_state.hpp  relationship.hpp  relationship_type.hpp  role.hpp  user.hpp  user_guild.hpp  voice_region.hpp  voice_state.hpp
include/rest/: api_client.hpp  client.hpp  route.hpp
include/rest/models/: add_dm_recipient_args.hpp  add_guild_member_args.hpp  bulk_delete_message_args.hpp  create_channel_invite_args.hpp  (+15 more)
include/util/: optional.hpp  semaphore.hpp
lib/: CMakeLists.txt  Makefile  client.c  client.cpp  client_api.c  client_internal.c  client_internal.h  discord.c  websocket.c  websocket_internal.c  websocket_internal.h
lib/REST/: REST.cpp  client.cpp
lib/api/: bucket_info.cpp  multipart_field.cpp  multipart_file.cpp  multipart_request.cpp  request_info.cpp
lib/include/: entity.hpp
lib/models/: application.cpp  attachment.cpp  audit_log_change.cpp  audit_log_entry.cpp  audit_logs.cpp  ban.cpp  channel.cpp  connection.cpp  dispatches.gperf  dispatches.h  embed.cpp  embed_author.cpp  embed_field.cpp  embed_footer.cpp  embed_image.cpp  embed_provider.cpp  embed_thumbnail.cpp  embed_video.cpp  emoji.cpp  entity.cpp  game.cpp  gateway.h  gateway_info.cpp  guild.cpp  guild_embed.cpp  guild_member.cpp  guild_prune.cpp  integration.cpp  integration_account.cpp  invite.cpp  invite_channel.cpp  invite_guild.cpp  invite_metadata.cpp  message.cpp  model.cpp  nickname.cpp  overwrite.cpp  presence.cpp  reaction.cpp  read_state.cpp  (+7 more)
lib/rest/: api_client.cpp  client.cpp  route.cpp
lib/rest/models/: add_dm_recipient_args.cpp  add_guild_member_args.cpp  bulk_delete_message_args.cpp  create_channel_invite_args.cpp  create_dm_channel_args.cpp  create_group_dm_args.cpp  create_guild_ban_args.cpp  create_guild_channel_args.cpp  create_guild_integration_args.cpp  create_message_args.cpp  create_webhook_args.cpp  edit_channel_permissions_args.cpp  edit_message_args.cpp  execute_webhook_args.cpp  guild_prune.cpp  guild_role_args.cpp  modify_channel_args.cpp  modify_current_nick_args.cpp  modify_current_user_args.cpp  modify_guild_args.cpp  modify_guild_embed_args.cpp  modify_guild_integration_args.cpp  modify_guild_member_args.cpp  modify_guild_role_positions_args.cpp  modify_positions_args.cpp  modify_webhook_args.cpp  nickname.cpp
lib/util/: semaphore.cpp  task_sleep.cpp  url_encode.cpp
lib/ws/: api_client.cpp  client.cpp  dispatcher.cpp  dispatches.gperf  dispatches.hpp
lib/ws/models/: frame.cpp  gateway_model.cpp
models/: CMakeLists.txt  application.lua  ban.lua  category.lua  channel.lua  connection.lua  entity.lua  game.lua  gateway_info.lua  guild.lua  guild_embed.lua  guild_member.lua  integration.lua  invite.lua  invite_metadata.lua  message.lua  read_state.lua  role.lua  user.lua  user_guild.lua  voice_region.lua  voice_state.lua
models/rest/: add_dm_recipient_args.lua  add_guild_member_args.lua  bulk_delete_message_args.lua  create_channel_invite_args.lua  create_dm_channel_args.lua  create_group_dm_args.lua  create_guild_ban_args.lua  create_guild_channel_args.lua  create_guild_integration_args.lua  create_message_args.lua  edit_channel_args.lua  edit_channel_permissions_args.lua  edit_current_user_args.lua  edit_current_user_nick_args.lua  edit_guild_args.lua  edit_guild_embed_args.lua  edit_guild_integration_args.lua  edit_guild_member_args.lua  edit_guild_role_args.lua  edit_message_args.lua  edit_positions_args.lua  guild_prune_args.lua
models/ws/: frame.lua  guild_sync_args.lua  hello.lua  identify.lua  identify_args.lua  request_guild_members_args.lua  resume_args.lua  status_update_args.lua  voice_state_update_args.lua
samples/: CMakeLists.txt  ping_pong.cpp
src/: Makefile  client.c  discord.c  websocket.c  websocket.h
test/: Makefile  client_connect.c  client_create.c  get_user.c
tests/: CMakeLists.txt  disccord_test.cpp  models.cpp  rest.cpp  routes.cpp  semaphores.cpp  url_encoder.cpp
tools/: code_template.tpp  generate_models.lua  header_template.tpp
(+28 files in other folders)
